I tried my best believe it or not

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,20 +24,9 @@
 <div class="outline">
 <div class="container">
 	<article id="content">
-		<div id="contact">
-	<h2 style=>Contact</h2>
-	<p id="split"><strong>_________________________________________________________</strong></p>
-		<form> 
-		Name <br>
-		<input type="text" name="wholename" value="John Smith" style="color:gray"><br>
-		Email<br>
-		<input type="text" name="email" value="example@gmail.com" style="color:gray"><br>
-		Message
-		<br>
-		<textarea rows="10" col="10"></textarea>
-		</form>
-		<button>Submit</button>
-		</div>
+		<h2 style= "margin-left: 17px">Portfolio</h2> 
+	<p>I could figure out how to keep the "connect" box in the right place when I posted images. It worked the first time, but I couldn't recreate it and ran out of time</p>
+
 	</article>
 
 
