--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,8 @@
 
 <header> 
 
-	<h1>Brian Wisnowski</h1>
+	<h1>Brian Wisnowski</h1> 
+	<!--I had this working fine before class Saturday, but my CSS got mixed with another file I was using before I got the hang of pushing to github. Anyway, the navbar would either stack on top of itself, which it does in this case, or it would "bleed" into the h1 element. I probbably spent 6-7 hours on it in the two days since class and I don't know if its because I was defining things later in the child elements too or if it was overflow/positioning? Not enough clears? I have a feeling I amin the ball park and will need to take better notes when I figure something out I suppose in the future as well as getting in the habit of pushing to github.-->
 
 		<nav>
 		<ul id=nav>
@@ -25,7 +26,8 @@
 <div class="container">
 	<article id="content">
 		<h2 style= "margin-left: 17px">Portfolio</h2> 
-	<p>I could figure out how to keep the "connect" box in the right place when I posted images. It worked the first time, but I couldn't recreate it and ran out of time</p>
+		<!--I spent so many hours trying to figure out my navbar that when I got to this, the hour or two I spent on it was just messing the whole page up with the side bar.-->
+	<p>explanation in comments</p>
 
 	</article>
 
